--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "css-loader": "^2.0.0",
     "file-loader": "^2.0.0",
     "mdx-deck": "^1.8.2",
+    "mdx-deck-code-surfer": "^0.5.5",
+    "raw-loader": "^2.0.0",
     "style-loader": "^0.23.1"
   }
 }
