--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "mdx-deck-code-surfer": "^0.5.5",
     "raw-loader": "^2.0.0",
     "style-loader": "^0.23.1"
+  },
+  "devDependencies": {
+    "prettier": "^1.17.0"
   }
 }
